Progress with CharactersBlockAnalysisPreprocessor